--- a/.github/workflows/aks_deploy.yml
+++ b/.github/workflows/aks_deploy.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Azure login
-      uses: azure/login@92a5484dfaf04ca78a94597f4f19fea633851fa2
+      uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
