--- a/.github/workflows/aks_deploy.yml
+++ b/.github/workflows/aks_deploy.yml
@@ -19,9 +19,10 @@ jobs:
     - name: Azure login
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+#        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
       
     - name: Set up kubelogin for non-interactive login
       uses: azure/use-kubelogin@v1
