--- a/.github/workflows/aks_deploy.yml
+++ b/.github/workflows/aks_deploy.yml
@@ -41,15 +41,16 @@ jobs:
  
       # Deploy to k8s cluster
     - name: Deploy to Kubernetes cluster
-      uses: Azure/k8s-deploy@v1
-      with:        
+      run: kubectl apply -f deploy-tomcat.yaml 
+      #uses: Azure/k8s-deploy@v1
+      #with:        
         # Path to the manifest files which will be used for deployment.
-        manifests: |
-          ./deploy-tomcat.yaml
+        #manifests: |
+          #./deploy-tomcat.yaml
 #          ./service.yml
         # Fully qualified resource URL of the image(s) to be used for substitutions on the manifest files Example: contosodemo.azurecr.io/helloworld:test
-        images: '${{secrets.DOCKER_HUB_USERNAME}}/azure_pipeline'
+        #images: '${{secrets.DOCKER_HUB_USERNAME}}/azure_pipeline'
         # Name of a docker-registry secret that has already been set up within the cluster. Each of these secret names are added under imagePullSecrets field for the workloads found in the input manifest files
-        imagepullsecrets: docker-image-pull-secret
+        #imagepullsecrets: docker-image-pull-secret
         # deploy/promote/reject
-        action: deploy
+        #action: deploy
