--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,12 @@
-# Docker
-# Build a Docker image
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
 - main
+
+pool: 
+  name: vilasagentpool
+  demands: Agent.Version -equals 4.248.0
+
 
 resources:
 - repo: self
@@ -17,9 +20,14 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool:
-      vmImage: ubuntu-latest
+#    pool: vilasagentpool
     steps:
+    - task: Maven@4
+      inputs:
+        mavenPomFile: './pom.xml'
+        publishJUnitResults: true
+        testResultsFiles: '**/surefire-reports/TEST-*.xml'
+        goals: 'package'
     - task: Docker@2
       displayName: Build an image
       inputs:
