--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,11 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-# - main
+- main
 
 pool: 
   name: mpool
-#  demands: Agent.Version -equals 4.248.0
+  demands: Agent.Version -equals 4.248.0
 
 
 resources:
@@ -20,7 +20,7 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-#    pool: vilasagentpool
+    pool: vilasagentpool
     steps:
     - task: Maven@4
       inputs:
